--- a/Blazor App Client Project/Pages/FetchData.cshtml
+++ b/Blazor App Client Project/Pages/FetchData.cshtml
@@ -1,5 +1,4 @@
-﻿@using Blazor080ServerSideTest.Shared
-@page "/fetchdata"
+﻿@page "/fetchdata"
 @inject HttpClient Http
 
 <h1>Weather forecast</h1>
@@ -36,10 +35,20 @@ else
 }
 
 @functions {
+
     WeatherForecast[] forecasts;
 
     protected override async Task OnInitAsync()
     {
-        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("/api/SampleData/WeatherForecasts");
+        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
     }
+
+    class WeatherForecast
+    {
+        public DateTime Date { get; set; }
+        public int TemperatureC { get; set; }
+        public int TemperatureF { get; set; }
+        public string Summary { get; set; }
+    }
+	
 }
