--- a/Blazor App Client Project/Pages/FetchData.cshtml
+++ b/Blazor App Client Project/Pages/FetchData.cshtml
@@ -42,13 +42,13 @@ else
     {
         forecasts = await Http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
     }
-
-    class WeatherForecast
+	
+	public class WeatherForecast
     {
         public DateTime Date { get; set; }
         public int TemperatureC { get; set; }
-        public int TemperatureF { get; set; }
         public string Summary { get; set; }
+        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
     }
-	
+
 }
